20120506 peripherals,peripherals/flash,peripherals/nic: add *.a to the ignore
         property (part of bug #3514721) (Sergio).
20120506 ui/{gtk/options-header.pl,widget/options-header.pl,
         win32/options-header.pl}: fix "Use of uninitialized value within @ARGV"
         warnings (rest of bug #3514721) (Sergio).
20120507 debugger/{debugger.c,debugger_internals.h,variable.c},fuse.c,
         keyboard.[ch],module.[ch],periph.[ch],
         peripherals/disk/{beta.c,disciple.c,opus.c,plusd.c},
         peripherals/speccyboot.[ch],settings.pl,tape.[ch],ui/sdl/sdldisplay.c,
         ui/widget/widget.c: fix various memory leaks (rest of bug #3515269)
         (Sergio).
20120507 machine.c,ui/widget/widget.c,ui/xlib/{Makefile.am,xdisplay.c,
         xstatusbar.pl}: add a statusbar for the xlib UI (patch #3496134)
         (Gergely Szasz).
20120507 input.h,keysyms.dat,keysyms.pl,ui/sdl/sdlkeyboard.c,
         ui/widget/fuse.font.sbf,ui/xlib/xkeyboard.c: extend supported symbol
         characters on SDL and xlib UIs (bug #3517588) (Sergio).
20120507 ui/win32/win32ui.c: fix win32 problem with closing modal dialogs
         (bug #3516228) (Sergio).
20120507 ui/gtk/{binary.c,browse.c,confirm.c,debugger.c,gtkjoystick.c,gtkui.c,
         memory.c,options.pl,picture.c,pokefinder.c,pokemem.c,rollback.c,roms.c,
         stock.c}: don't access GtkDialog's vbox and action_area directly
         (patch #3518505) (Alberto Garcia).
20120507 ui/gtk/gtkui.c: fix regression in GTK UI pause menu from r4685
         (bug #3523741) (Sergio).
20120521 ui/gtk/{binary.c,browse.c,debugger.c,gtkjoystick.c,memory.c,options.pl,
         pokefinder.c,rollback.c}: replace deprecated
         gtk_box_pack_start_defaults() with gtk_box_pack_start() (part of patch
         #3527406) (Sergio).
20120521 ui/gtk/statusbar.c: replace deprecated gtk_label_set() with
         gtk_label_set_text() (part of patch #3527406) (Sergio).